Changed Cursor positions from absolute to fixed, now no longer increases page height when cursor is off-screen

--- a/styles/Cursor.module.scss
+++ b/styles/Cursor.module.scss
@@ -6,7 +6,7 @@
     background-color: $accent;
     border: 1px solid $accent;
     border-radius: 50%;
-    position: absolute;
+    position: fixed;
     pointer-events: none;
     z-index: 9999;
 }
@@ -14,7 +14,7 @@
 .cursor-outer {
     width: 60px;
     height: 60px;
-    position: absolute;
+    position: fixed;
     border: 2px solid $accent;
     border-radius: 50%;
     background-color: rgba(255, 137, 6, 0.3);
